js/js.translator/testData/incremental/invalidation/typeScriptExports/main/m.1.d.ts
declare namespace kotlin_main {
    type Nullable<T> = T | null | undefined
    function foo(): number;
    function box(stepId: number): string;
}
